--- a/style.css
+++ b/style.css
@@ -24,12 +24,11 @@ h1{
 }
 .section2{
     display: flex;
-    width: auto;
-    padding: 10%;
+    padding: 0;
     margin: 0;
     background-image: url(images/shapes/7.png);
-    background-size: contain;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .bottom{
     padding-bottom: 40px;
@@ -49,26 +48,22 @@ h1{
 .img{
     width: 100%;
 margin-left: 100px;
-margin-left: 100px;
 
 }
-.big-img img{
-    width:80%;
-    position: absolute;
-    margin: 0;
-}
+
 .three{
-    box-shadow: 10px 10px 40px 10px rgb(245, 248, 239);
+    box-shadow: 10px 10px 20px 20px rgb(210, 211, 208);
     width: 30%;
     margin: 3% 2% 3% 2%;
-    padding: 7px 7px;
-    border-radius: 20px;
+    padding: 10px 7px;
+    border-radius: 30px;
 }
+
 .three img{
     width:90%;
     height: 40%;
-   
-    padding: 10px 10px 10px 10px;
+    padding: 3%;
+    margin: 5px;
 }
 
 footer{
